k8s/apps/asset-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset-app
  namespace: prodesk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asset-app
  template:
    metadata:
      labels:
        app: asset-app
    spec:
      enableServiceLinks: false
      containers:
      - name: asset-app
        image: ghcr.io/sijunkim/asset-app:master-ad9f052
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
