k8s/apps/asset-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asset-app
  namespace: prodesk
spec:
  type: ClusterIP
  selector:
    app: asset-app
  ports:
  - port: 8080
    targetPort: 8080
