k8s/apps/asset-app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: asset
  namespace: prodesk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`asset.kimsijun.com`)
      kind: Rule
      services:
        - name: asset-app
          port: 8080
  tls:
    certResolver: letsencrypt
